; ModuleID = '/home/carl/AnghaBench/php-src/main/streams/extr_userspace.c_stream_wrapper_dtor.c'
source_filename = "/home/carl/AnghaBench/php-src/main/streams/extr_userspace.c_stream_wrapper_dtor.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i64 }
%struct.php_user_stream_wrapper = type { %struct.php_user_stream_wrapper*, %struct.php_user_stream_wrapper* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.TYPE_3__*)* @stream_wrapper_dtor to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @stream_wrapper_dtor(%struct.TYPE_3__* %0) #0 {
  %2 = alloca %struct.TYPE_3__*, align 8
  %3 = alloca %struct.php_user_stream_wrapper*, align 8
  store %struct.TYPE_3__* %0, %struct.TYPE_3__** %2, align 8
  %4 = load %struct.TYPE_3__*, %struct.TYPE_3__** %2, align 8
  %5 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %4, i32 0, i32 0
  %6 = load i64, i64* %5, align 8
  %7 = inttoptr i64 %6 to %struct.php_user_stream_wrapper*
  store %struct.php_user_stream_wrapper* %7, %struct.php_user_stream_wrapper** %3, align 8
  %8 = load %struct.php_user_stream_wrapper*, %struct.php_user_stream_wrapper** %3, align 8
  %9 = getelementptr inbounds %struct.php_user_stream_wrapper, %struct.php_user_stream_wrapper* %8, i32 0, i32 1
  %10 = load %struct.php_user_stream_wrapper*, %struct.php_user_stream_wrapper** %9, align 8
  %11 = call i32 @efree(%struct.php_user_stream_wrapper* %10)
  %12 = load %struct.php_user_stream_wrapper*, %struct.php_user_stream_wrapper** %3, align 8
  %13 = getelementptr inbounds %struct.php_user_stream_wrapper, %struct.php_user_stream_wrapper* %12, i32 0, i32 0
  %14 = load %struct.php_user_stream_wrapper*, %struct.php_user_stream_wrapper** %13, align 8
  %15 = call i32 @efree(%struct.php_user_stream_wrapper* %14)
  %16 = load %struct.php_user_stream_wrapper*, %struct.php_user_stream_wrapper** %3, align 8
  %17 = call i32 @efree(%struct.php_user_stream_wrapper* %16)
  ret void
}

declare dso_local i32 @efree(%struct.php_user_stream_wrapper*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
